Fix scroll and timestamp alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -96,13 +96,8 @@
 
   // BODY SECTION - incoming & outgoing messages, etc
   main.messages-container {
-    height: 100%;
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
     overflow-y: auto;
-    gap: 25px;
     padding: 20px;
     position: relative;
 
@@ -112,6 +107,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      margin: 0 0 25px 0;
 
       .message-timestamp {
         font-size: 12px;
@@ -169,6 +165,10 @@
 
     .outgoing {
       margin-left: auto;
+
+      .message-timestamp {
+        text-align: right;
+      }
 
       .wrapper {
         background: #E9EBF0;
